# zv9.Aetherion

./: .gitignore  README.md
project/: Cargo.toml  api_bot_API.rs
project/echoengine/: GDExtension.toml  changeover_API.rs
project/echoengine/src/: lib.rs
project/echoengine/src/audit/: logger.rs  manifest.rs
project/echoengine/src/engine/: dimension.rs  generator.rs  lifecycle.rs
project/echoengine/src/interface/: bindings.rs  lib.rs  signal.rs
project/echoengine/src/pre-echo/: api_bot.rs  changeover.rs  prelude.rs  threading.rs  types.rs
project/echoengine/src/utils/: config.rs  threading.rs
project/src/audit/: overlay.rs
project/src/engine/: animator.rs  prelude.rs  registry.rs  runtime.rs
project/src/interface/: echo_api.rs
project/src/utils/: mapper.rs
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/OLD1/audit/: logger.rs  mod.rs
rust/OLD1/docs/: manifest.rs
rust/OLD1/engine/: animator.rs  generator.rs  mod.rs  prelude.rs  runtime.rs  types.rs
rust/OLD1/interface/: adapter.rs  data_bridge.rs
rust/OLD1/pre-echo/: image_processor.rs  map_builder.rs  signal_echo.rs  signal_manifest.rs  tile_smasher.rs
rust/OLD1/utils/: helpers.rs  mod.rs  time.rs
rust/OLD2/: commands.rs  concurrency.rs  godotsync.rs  lib.rs  tile_placer.rs
rust/src/: aetherion_binary.rs  lib.rs  prelude.rs  zv9_aetherion_codegen_config.rs  zv9_aetherion_codegen_dsl.rs  zv9_aetherion_codegen_emitter.rs  zv9_aetherion_codegen_parser.rs  zv9_aetherion_core_conductor.rs  zv9_aetherion_core_dimension.rs  zv9_aetherion_core_lifecycle.rs  zv9_aetherion_core_runtime.rs  zv9_aetherion_generator_noise.rs  zv9_aetherion_generator_noise_config.rs  zv9_aetherion_generator_pattern_type.rs  zv9_aetherion_generator_patterns.rs  zv9_aetherion_interaction_modifiers.rs  zv9_aetherion_interaction_tools.rs  zv9_aetherion_pipeline_builder_bitmask.rs  zv9_aetherion_pipeline_builder_builder.rs  zv9_aetherion_pipeline_builder_streamer.rs  zv9_aetherion_pipeline_builder_threaded.rs  zv9_aetherion_pipeline_data_chunk.rs  zv9_aetherion_pipeline_data_data.rs  zv9_aetherion_pipeline_data_grid.rs  zv9_aetherion_pipeline_data_tile.rs  zv9_aetherion_pipeline_data_vector.rs  zv9_aetherion_structure_generation.rs  zv9_aetherion_structure_placement.rs  zv9_godot_interface_api_config.rs  zv9_godot_interface_api_engine.rs  zv9_godot_interface_api_generator.rs  zv9_godot_interface_api_map.rs  zv9_godot_interface_api_oracle.rs  zv9_godot_interface_api_signals.rs  zv9_godot_interface_bindings_godot_types.rs  zv9_godot_interface_interface_controls.rs  zv9_godot_interface_interface_diagnostics.rs  zv9_godot_interface_messaging_messages.rs  zv9_godot_interface_messaging_sync.rs  zv9_godot_interface_signals_definitions.rs  (+24 more)
rust/src/OLD1/interface/: bindings.rs  echo_api.rs
rust/src/OLD1/pre-echo/: project_notes.rs
rust/src/OLD2/: engine_messages.rs  level_importer.rs  map_builder.rs  router.rs  signals.rs
rust/src/aetherion/: mod.rs
rust/src/aetherion/codegen/: config.rs  dsl.rs  emitter.rs  mod.rs  parser.rs
rust/src/aetherion/core/: conductor.rs  dimension.rs  lifecycle.rs  mod.rs  runtime.rs
rust/src/aetherion/generator/: mod.rs  noise.rs  noise_config.rs  pattern_type.rs  patterns.rs
rust/src/aetherion/interaction/: mod.rs  modifiers.rs  tools.rs
rust/src/audit/: debugger.rs  overlay.rs
rust/src/core/: map_builder.rs  mod.rs  registry.rs  tile_placer.rs
rust/src/data_processing/: level_importer.rs  mod.rs  types.rs
rust/src/docs/: manifest.rs  zv9__bin__manifest.rs
rust/src/engine/: lifecycle.rs  registry.rs  runtime.rs
rust/src/examples/: infinity.rs  mod.rs  pacman_expansive.rs  racing.rs
rust/src/game_logic/: mod.rs
rust/src/godot4/: mod.rs
rust/src/godot_bridge/: bindings.rs  commands.rs  mod.rs  signals.rs
rust/src/interface/: adapter.rs  bindings.rs  echo_api.rs  mod.rs  signal.rs
rust/src/pre-echo/: annotation_loader.rs  threading.rs
rust/src/shared/: grid2d.rs  grid_bounds.rs  math.rs  mod.rs  spatial.rs  traits.rs  types.rs
rust/src/tests/: common.rs  generation_tests.rs  mod.rs  pipeline_tests.rs  signal_tests.rs  trait_tests.rs
rust/src/trailkeeper/: collector.rs  config.rs  entry.rs  export.rs  macros.rs  mod.rs  registry.rs  scan.rs  watch.rs
rust/src/util/: config.rs  direction.rs  logging.rs  mod.rs  position.rs  profiling.rs  time.rs  timer.rs  velocity.rs
rust/src/utilities/: concurrency.rs  mod.rs
rust/src/utils/: config.rs  helpers.rs  mapper.rs  threading.rs
rust/src2/: lib.rs  model.rs
rust/src2/audit/: annotation.rs
rust/src2/interface/: mod.rs
rust/src2/pre-echo/: logging.rs  signal_hub.rs
(+59 files in other folders)
