[package]
name = "tile_smasher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = "0.30.5"
once_cell = "1.21.3"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
thiserror = "1.0"

# Corrected bindings to internal crates
godot = { path = "../../../zv9.gdext/godot" }
godot-core = { path = "../../../zv9.gdext/godot-core" }
godot-macros = { path = "../../../zv9.gdext/godot-macros" }

[build-dependencies]
gdext-gen = "0.1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

#[[bin]]
#name = "audit_macro"
#path = "src/bin/audit_macro.rs"

[features]
default = []
macros = ["godot/macros"]
