[package]
name = "Aetherion_Engine"
version = "0.1.0"
edition = "2021"


# A GDExtension library must be of this type
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Required for your `build_map` pipeline:
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crossbeam-channel = "0.5"
crossbeam = "0.8"
log = "0.4"
env_logger = "0.10"
crossterm = "0.27"
walkdir = "2.4"


# Required for concurrent programming, linear algebra, etc.
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
thiserror = "1.0"
glam = "0.30.5"
once_cell = "1.21.3"

# Godot-rust specific dependencies
godot = { path = "../../zv9.gdext/godot" }
godot-core = { path = "../../zv9.gdext/godot-core" }
godot-macros = { path = "../../zv9.gdext/godot-macros" }



[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[[bin]]
# name = "sync_to_godot"
# path = "src/bin/sync_to_godot.rs"

name = "aetherion_binary"
path = "src/bin/aetherion_binary.rs"

# [[bin]]
# name = "debugger"
# path = "src/bin/debugger.rs"

[alias]
build-sync = "build --release && run --bin sync_to_godot"

[features]
default = []
macros = []